form title description

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <!-- Lead Capture Form -->
                 <div class="bg-white rounded-2xl shadow-2xl p-8 md:p-10">
                     <div class="text-center mb-6">
-                        <h2 class="text-3xl font-bold text-gray-800 mb-2">Start Your Free Trial</h2>
-                        <p class="text-gray-600">Get 7 days of premium access + Free eBook</p>
+                        <h2 class="text-3xl font-bold text-gray-800 mb-2">Ready to Get Started?</h2>
+                        <p class="text-gray-600">Fill Up The Form to get a Call from our Academic Counselor & to Download our Brochure*</p>
                     </div>
 
                     <form class="space-y-4" id="leadForm">
